[package]
name = "consensource-cli"
version = "0.1.0"
authors = ["Target"]
edition = "2018"

[[bin]]
name = "csrc"
path = "src/main.rs"

[dependencies]
clap = "2"
futures = "0.1"
hyper = "0.11"
protobuf = "2.8.1"
rust-crypto = "0.2"
sawtooth-sdk = "0.2"
tokio-core = "0.1"
users = "0.6"
yaml-rust = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
common = { git = "https://github.com/target/consensource-common.git", branch = "master" }
uuid = { version = "0.6", features = ["serde", "v4"] }
chrono = "0.4"
